[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["alloc", "std"] }
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
named_pipe = "0.4"

[dev-dependencies]

[package.metadata.cbindgen]
language = "C"
include-version = true
ignore-unknown-types = true